Update to version 0.9.1
New Features
    - Added surface pressure and temperature to body information.

Changes
   - Moved Body Description in current system bodies to its own column.
   - Added Temperature unit selection to settings
   - Added link to EJR fork for this project

Bug Fixes
   - Corrected github link in about box
   - Added missing event handler for Clear All Data button in Bio Data window

--- a/ODExplorer/AboutBox/AboutBox.xaml
+++ b/ODExplorer/AboutBox/AboutBox.xaml
@@ -269,7 +269,7 @@
                     
                     <TextBlock VerticalAlignment="Center"
                                Margin="20,0,0,5">
-                        <Hyperlink NavigateUri="http://www.github.com/warmedxmints"
+                        <Hyperlink NavigateUri="https://github.com/WarmedxMints/OD-Explorer"
                                    RequestNavigate="Hyperlink_RequestNavigate"
                                    Foreground="{DynamicResource Font Colour}">
                             GitHub Project
@@ -285,6 +285,15 @@
                         </Hyperlink>
                     </TextBlock>
 
+                    <TextBlock VerticalAlignment="Center"
+                               Margin="20,0,0,5">
+                        <Hyperlink NavigateUri="https://github.com/WarmedxMints/EliteJournalReader"
+                                   RequestNavigate="Hyperlink_RequestNavigate"
+                                   Foreground="{DynamicResource Font Colour}">
+                            OD Explorer Elite Journal Reader Fork
+                        </Hyperlink>
+                    </TextBlock>
+                    
                     <TextBlock VerticalAlignment="Center"
                                Margin="20,0,0,5">
                         <Hyperlink NavigateUri="https://github.com/joncage/ed-scout"
